--- a/joint_fusion/config/config_3f_100ep.yaml
+++ b/joint_fusion/config/config_3f_100ep.yaml
@@ -1,13 +1,14 @@
 # Base configuration
 
 data:
-  input_path: "/lus/eagle/clone/g2/projects/GeomicVar/tarak/multimodal_learning_T1/preprocessing/"
-  input_wsi_path: "/lus/eagle/clone/g2/projects/GeomicVar/tarak/multimodal_learning_T1/preprocessing/TCGA_WSI/LUAD_all/svs_files/FFPE_tiles_single_sample_per_patient_13july/tiles/256px_9.9x/combined/"
-  h5_file: "joint_fusion/mapping_data.h5"
-  input_mapping_data_path: "/lus/eagle/clone/g2/projects/GeomicVar/jozhw/multimodal_learning_T1/joint_fusion/"
-  only_create_new_data_mapping: false
-  create_new_data_mapping: false
-  create_new_data_mapping_h5: false
+  input_base_path: "/lus/eagle/clone/g2/projects/GeomicVar/jozhw/multimodal_learning_T1/mapping_data/31jan_256px_20x/"
+  input_base_mapping_data_json_path: "/lus/eagle/clone/g2/projects/GeomicVar/jozhw/multimodal_learning_T1/mapping_data/31jan_256px_20x/mapping_df_31Jan_1000tiles.json"
+  input_wsi_path: "/lus/eagle/clone/g2/projects/GeomicVar/tarak/multimodal_learning_T1/preprocessing/TCGA_WSI/LUAD_all/svs_files/FFPE_tiles_single_sample_per_patient_20X_1000tiles/tiles/256px_128um/combined/"
+  h5_file: "mapping_data/31jan_256px_20x/mapping_data.h5"
+  only_create_new_data_mapping: true
+  create_new_data_mapping: true
+  create_new_data_mapping_h5: true
+  num_tiles_per_slide: 400
   
 model:
   embedding_dim_wsi: 384
