--- a/joint_fusion/config/config_3f_100ep.yaml
+++ b/joint_fusion/config/config_3f_100ep.yaml
@@ -5,9 +5,9 @@ data:
   input_base_mapping_data_json_path: "/lus/eagle/clone/g2/projects/GeomicVar/jozhw/multimodal_learning_T1/mapping_data/31jan_256px_20x/mapping_df_31Jan_1000tiles.json"
   input_wsi_path: "/lus/eagle/clone/g2/projects/GeomicVar/tarak/multimodal_learning_T1/preprocessing/TCGA_WSI/LUAD_all/svs_files/FFPE_tiles_single_sample_per_patient_20X_1000tiles/tiles/256px_128um/combined/"
   h5_file: "mapping_data/31jan_256px_20x/mapping_data.h5"
-  only_create_new_data_mapping: true
-  create_new_data_mapping: true
-  create_new_data_mapping_h5: true
+  only_create_new_data_mapping: false
+  create_new_data_mapping: false
+  create_new_data_mapping_h5: false
   num_tiles_per_slide: 400
   
 model:
@@ -22,8 +22,8 @@ model:
   omic_checkpoint_path: "checkpoints/checkpoint_2024-09-04-07-56-47/checkpoint_epoch_1500.pth" 
   
 training:
-  batch_size: 80
-  val_batch_size: 70
+  batch_size: 50
+  val_batch_size: 50
   lr: 0.0001
   num_epochs: 100
   n_folds: 3
